--- a/.github/workflows/main_testingactions.yml
+++ b/.github/workflows/main_testingactions.yml
@@ -5,8 +5,8 @@ name: Build and deploy ASP.Net Core app to Azure Web App - testingactions
 
 on:
   push:
-    branches:
-      - main
+    ##branches:
+      ##- main
   workflow_dispatch:
 
 jobs:
@@ -18,6 +18,18 @@ jobs:
 
       - name: Branch name
         run: echo running on branch ${GITHUB_REF##*/}
+
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    
+    - name: Azure CLI script
+      uses: azure/CLI@v1
+      with:
+        #azcliversion: 2.0.72
+        inlineScript: |
+          az webapp list
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
