--- a/.github/workflows/main_testingactions.yml
+++ b/.github/workflows/main_testingactions.yml
@@ -34,11 +34,11 @@ jobs:
         with:
           #azcliversion: 2.0.72
           inlineScript: |
-            export PUBPROFILE=az webapp deployment list-publishing-profiles --name blah634233423 --resource-group alexwolfpspicasso
+            PUBPROFILE=$(az webapp deployment list-publishing-profiles --name blah634233423 --resource-group alexwolfpspicasso)
           #az webapp create -p basic -g alexwolfpspicasso -n blah634233423
 
       - name: Print list
-        run: echo PUBPROFILE
+        run: echo $PUBPROFILE
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
@@ -82,5 +82,5 @@ jobs:
           app-name: 'blah634233423'
           slot-name: 'Production'
           #publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F38EB79D802E4FF2BF9C7226BF293B70 }}
-          public-profile: ${PUBPROFILE}
+          public-profile: $PUBPROFILE
           package: .
