--- a/.github/workflows/main_testingactions.yml
+++ b/.github/workflows/main_testingactions.yml
@@ -5,8 +5,8 @@ name: Build and deploy ASP.Net Core app to Azure Web App - testingactions
 
 on:
   push:
-    branches:
-      main
+    ##branches:
+      ##- main
   workflow_dispatch:
 
 jobs:
@@ -24,22 +24,13 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
           enable-AzPSSession: true
-
-      #- name: Set variable
-      #  env:
-      #    PUB_PROFILE: az webapp deployment list-publishing-profiles --name blah634233423 --resource-group alexwolfpspicasso
       
       - name: Azure CLI script
         uses: azure/CLI@v1
         with:
           #azcliversion: 2.0.72
           inlineScript: |
-            PUBPROFILE=$(az webapp deployment list-publishing-profiles --name blah634233423 --resource-group alexwolfpspicasso --output tsv);echo $PUBPROFILE
-            
-          #az webapp create -p basic -g alexwolfpspicasso -n blah634233423
-
-      - name: Print list
-        run: echo $PUBPROFILE
+            az webapp create -p basic -g alexwolfpspicasso -n blah634233423
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
@@ -79,9 +70,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          #app-name: 'testingactions'
           app-name: 'blah634233423'
           slot-name: 'Production'
           #publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F38EB79D802E4FF2BF9C7226BF293B70 }}
-          publish-profile: $PUBPROFILE
           package: .
