--- a/.github/workflows/main_testingactions.yml
+++ b/.github/workflows/main_testingactions.yml
@@ -25,12 +25,12 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
           enable-AzPSSession: true
       
-      - name: Azure CLI script
-        uses: azure/CLI@v1
-        with:
-          #azcliversion: 2.0.72
-          inlineScript: |
-            az webapp create -p basic -g alexwolfpspicasso -n ${GITHUB_REF##*/}
+      #- name: Azure CLI script
+      #  uses: azure/CLI@v1
+      #  with:
+      #    #azcliversion: 2.0.72
+      #    inlineScript: |
+      #      az webapp create -p basic -g alexwolfpspicasso -n ${GITHUB_REF##*/}
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
@@ -54,13 +54,18 @@ jobs:
           path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
+      - uses: actions/checkout@v2
+
+      - name: Branch name
+        run: echo running on branch ${GITHUB_REF##*/}
+
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
@@ -78,5 +83,4 @@ jobs:
         with:
           app-name: ${GITHUB_REF##*/}
           slot-name: 'Production'
-          #publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F38EB79D802E4FF2BF9C7226BF293B70 }}
           package: .
