--- a/.github/workflows/main_testingactions.yml
+++ b/.github/workflows/main_testingactions.yml
@@ -76,6 +76,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: $GITHUB_REF
+          app-name: ${GITHUB_REF##*/}
           slot-name: 'Production'
           package: .
