--- a/.github/workflows/main_testingactions.yml
+++ b/.github/workflows/main_testingactions.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Branch name
-        run: echo running on branch ${GITHUB_REF##*/}
+        run: echo running on branch  ${{ github.run_id }}
 
       - name: Azure Login
         uses: azure/login@v1
@@ -27,7 +27,7 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
-              az webapp create -p basic -g alexwolfpspicasso -n ${GITHUB_REF##*/}
+              az webapp create -p basic -g alexwolfpspicasso -n ${{ github.run_id }}
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
@@ -76,6 +76,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ${GITHUB_REF##*/}
+          app-name: ${{ github.run_id }}
           slot-name: 'Production'
           package: .
