--- a/.github/workflows/main_testingactions.yml
+++ b/.github/workflows/main_testingactions.yml
@@ -5,6 +5,8 @@ name: Build and deploy ASP.Net Core app to Azure Web App - testingactions
 
 on:
   push:
+    branches:
+      - 'feature/*'
   workflow_dispatch:
 
 jobs:
