--- a/.github/workflows/main_testingactions.yml
+++ b/.github/workflows/main_testingactions.yml
@@ -15,9 +15,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+      
       - name: Branch name
-        run: echo running on branch  ${{ github.run_id }}
+        run:  echo '::set-output name=BRANCH::${{ github.ref }}'
+        id: branch-ref
 
       - name: Azure Login
         uses: azure/login@v1
@@ -29,7 +30,7 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
-              az webapp create -p basic -g alexwolfpspicasso -n ${{ github.run_id }}
+              az webapp create -p basic -g alexwolfpspicasso -n ${{ steps.branch-ref.outputs.BRANCH }}"
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
@@ -46,28 +47,6 @@ jobs:
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
-    #  - name: Upload artifact for deployment job
-    #    uses: actions/upload-artifact@v2
-    #    with:
-    #      name: .net-app
-    #      path: ${{env.DOTNET_ROOT}}/myapp
-
-  #deploy:
-  #  runs-on: ubuntu-latest
-  #  needs: build
-  #  environment:
-  #    name: 'Production'
-  #    url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-  #
-  #steps:
-  #- name: Branch name
-  #  run: echo running on branch ${GITHUB_REF##*/}
-
-  #- name: Download artifact from build job
-  #  uses: actions/download-artifact@v2
-  #  with:
-  #    name: .net-app
-
       - name: Azure Login
         uses: azure/login@v1
         with:
@@ -78,6 +57,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ${{ github.run_id }}
+          app-name: ${{ steps.branch-ref.outputs.BRANCH }}"
           slot-name: 'Production'
           package: ${{env.DOTNET_ROOT}}/myapp
