--- a/.github/workflows/main_testingactions.yml
+++ b/.github/workflows/main_testingactions.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           azcliversion: 2.0.72
           inlineScript: |
-              az webapp create -p basic -g alexwolfpspicasso -n ${{ steps.branchref.outputs.substring }}"
+              az webapp create -p basic -g alexwolfpspicasso -n ${{ steps.branchref.outputs.substring }}
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
